fix resume spacing

--- a/components/cv.module.scss
+++ b/components/cv.module.scss
@@ -12,7 +12,7 @@ $font-size: 1.5vh;
     p {
         margin: 0;
         margin-bottom: 2vh;
-        margin-left: 2vh;
+        margin-left: 1.5vh;
     }
 
     .sectionheader {
@@ -21,7 +21,7 @@ $font-size: 1.5vh;
         display: flex;
         width: 100%;
         margin: 0;
-        margin-bottom: 1.5vh;
+        margin-bottom: 1vh;
         padding: 1vh 2.5vh;
     }
 
